--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -30,7 +30,7 @@
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
-      <pdf-viewer url="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf"></pdf-viewer>
+      <pdf-viewer url="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" width="380"></pdf-viewer>
       </ion-content>
     </ion-pane>
   </body>
