--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -14,7 +14,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/pdfjs-dist/build/pdf.js"></script>
+    <script src="js/pdf.js"></script>
     <script src="lib/ng-pdf-viewer/src/ng-pdf-viewer.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -22,15 +22,18 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
+    <script src="js/ng-pdfviewer.js"></script>
+    </head>
   <body ng-app="starter">
 
-    <ion-pane>
+    <ion-pane ng-controller="TestCtrl">
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
       </ion-header-bar>
       <ion-content>
-      <pdf-viewer url="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" width="380"></pdf-viewer>
+      <button ng-click="setScale(1.8)">ZOOM</button>
+      <!-- <pdf-viewer url="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" width="380"></pdf-viewer> -->
+      <pdfviewer src="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" on-page-load='pageLoaded(page,total)' id="viewer" zoomLevel="page-fit"></pdfviewer>
       </ion-content>
     </ion-pane>
   </body>
