--- a/angularpdfViewer/www/index.html
+++ b/angularpdfViewer/www/index.html
@@ -36,15 +36,12 @@
     </ion-header-bar>
 
       <ion-content>
-      
-
-
       <pdf-viewer
         delegate-handle="my-pdf-container"
         url="pdfUrl"
-        scale="1"
+        scale="0.3"
         show-toolbar="true"
-        ></pdf-viewer>
+        ><canvas height="1000" width="100"></canvas></pdf-viewer>
       </ion-content>
     </ion-pane>
   </body>
