--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -32,8 +32,8 @@
       </ion-header-bar>
       <ion-content>
       <button ng-click="setScale(1.8)">ZOOM</button>
-      <!-- <pdf-viewer url="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" width="380"></pdf-viewer> -->
-      <pdfviewer src="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" on-page-load='pageLoaded(page,total)' id="viewer" zoomLevel="page-fit"></pdfviewer>
+      <pdf-viewer url="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" width="380"></pdf-viewer>
+      <!-- <pdfviewer src="http://n2.transparent.sg:3000/assets/documents/50912073534.pdf" on-page-load='pageLoaded(page,total)' id="viewer" zoomLevel="page-fit" width="150"></pdfviewer> -->
       </ion-content>
     </ion-pane>
   </body>
